force-app/main/default/objects/fileforcem1__Sharepoint_Settings__mdt/fileforcem1__Sharepoint_Settings__mdt.object-meta.xml
<CustomObject>
    <label>SharePoint Settings</label>
    <pluralLabel>SharePoint Settings</pluralLabel>
</CustomObject>