force-app/main/default/objects/fileforcem1__Sharepoint_Settings__mdt/fields/fileforcem1__Advanced_Authentication__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Advanced_Authentication__c</fullName>
    <label>Advanced Authentication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
                <default>true</default>
                <label>Disabled</label>
            </value>
            <value>
                <fullName>Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>