force-app/main/default/objects/fileforcem1__Sharepoint_Settings__mdt/fields/fileforcem1__Color__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Color__c</fullName>
    <label>Custom Color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>