force-app/main/default/objects/fileforcem1__Sharepoint_Settings__mdt/fields/fileforcem1__Custom_Logo__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Custom_Logo__c</fullName>
    <inlineHelpText>To set a custom logo, upload a custom logo into your Asset Library and share it org-wide. Specify the name of the asset file name. If you set &quot;none&quot; as a value, no logo will show.</inlineHelpText>
    <label>Custom Logo Asset Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>