force-app/main/default/objects/fileforcem1__Sharepoint_Settings__mdt/fields/fileforcem1__Document_Library_Id__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Document_Library_Id__c</fullName>
    <description>The ID of document library in sharepoint, ie. &quot;00000000-0000-0000-0000-000000000000&quot;.</description>
    <inlineHelpText>To find this ID, click &quot;Library Settings&quot; under the gear menu in SharePoint, and copy the GUID located in the URL between &quot;List=%7B&quot; and &quot;%7D&quot;.</inlineHelpText>
    <label>Document Library Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>