force-app/main/default/objects/fileforcem1__Sharepoint_Settings__mdt/fields/fileforcem1__Document_Library_Path__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Document_Library_Path__c</fullName>
    <description>The path of document library in sharepoint, e.g., &quot;sites/Docs/Shared Documents&quot;.</description>
    <inlineHelpText>To find this path, navigate to your SharePoint Document Library and copy the path after the domain and the backslash. e.g.,&quot;sites/Docs/Shared Documents&quot;</inlineHelpText>
    <label>Document Library Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>