force-app/main/default/objects/fileforcem1__Sharepoint_Settings__mdt/fields/fileforcem1__File_Uploader_Type__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__File_Uploader_Type__c</fullName>
    <label>File Uploader Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SharePoint</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>