force-app/main/default/objects/fileforcem1__Sharepoint_Settings__mdt/fields/fileforcem1__Sharepoint_Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Sharepoint_Domain_Name__c</fullName>
    <label>SharePoint Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>