force-app/main/default/objects/fileforcem1__Sharepoint_Settings__mdt/fields/fileforcem1__Site_Id__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Site_Id__c</fullName>
    <label>Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>