force-app/main/default/objects/fileforcem1__Sharepoint_Settings__mdt/fields/fileforcem1__Upload_Success_Page_Url__c.field-meta.xml
<CustomField>
    <fullName>fileforcem1__Upload_Success_Page_Url__c</fullName>
    <inlineHelpText>Only used in SharePoint File Uploader Type: url to show when upload is successful.</inlineHelpText>
    <label>Upload Success Page Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>